--- a/word-embed/Dockerfile
+++ b/word-embed/Dockerfile
@@ -5,5 +5,10 @@ RUN wget https://github.com/facebookresearch/fastText/archive/v0.1.0.zip
 RUN unzip v0.1.0.zip
 WORKDIR /fastText-0.1.0
 RUN make
+
 RUN wget https://s3-us-west-1.amazonaws.com/fasttext-vectors/wiki.ko.zip
 RUN unzip wiki.ko.zip
+
+RUN apt-get install libicu-dev
+RUN pip3 install polyglot
+RUN pip3 install gensim
