--- a/tf-word-embed/Dockerfile
+++ b/tf-word-embed/Dockerfile
@@ -1,7 +1,6 @@
 FROM nsml/default_ml:tf-1.4.1
 
-RUN wget https://s3-us-west-1.amazonaws.com/fasttext-vectors/word-vectors-v2/cc.ko.300.vec.gz
-RUN gzip -d cc.ko.300.vec.gz
+RUN wget --no-check-certificate https://drive.google.com/file/d/17RYZqJYGMZt5-30P1mIunMjH0B_v-3g0/view?usp=sharing -o cc.ko.300.vec
 
 RUN pip3 install gensim
 
