--- a/tf-word-embed/Dockerfile
+++ b/tf-word-embed/Dockerfile
@@ -1,6 +1,5 @@
 FROM nsml/default_ml:tf-1.4.1
 
-RUN wget --no-check-certificate https://drive.google.com/file/d/17RYZqJYGMZt5-30P1mIunMjH0B_v-3g0/view?usp=sharing -o cc.ko.300.vec
-
+RUN wget https://www.dropbox.com/s/qxhcn6xd0y5iz00/cc.ko.300.vec?dl=1 -O cc.ko.300.vec
 RUN pip3 install gensim
 
