--- a/tf-word-embed/Dockerfile
+++ b/tf-word-embed/Dockerfile
@@ -1,5 +1,6 @@
 FROM nsml/default_ml:tf-1.4.1
 
+RUN apt-get update
 RUN apt-get install wget
 RUN wget https://www.dropbox.com/s/qxhcn6xd0y5iz00/cc.ko.300.vec?dl=1 -O cc.ko.300.vec
 RUN pip3 install gensim
