--- a/tf-word-embed/Dockerfile
+++ b/tf-word-embed/Dockerfile
@@ -1,7 +1,9 @@
-FROM nsml/default_ml:tf-1.4.1
+FROM tensorflow/tensorflow:1.10.0-gpu-py3
 
 RUN apt-get update
-RUN apt-get install wget
-RUN wget https://www.dropbox.com/s/qxhcn6xd0y5iz00/cc.ko.300.vec?dl=1 -O cc.ko.300.vec
+RUN apt-get install wget, gzip
+RUN wget https://s3-us-west-1.amazonaws.com/fasttext-vectors/word-vectors-v2/cc.ko.300.bin.gz
+RUN gzip -d cc.ko.300.bin.gz
+#RUN wget https://www.dropbox.com/s/qxhcn6xd0y5iz00/cc.ko.300.vec?dl=1 -O cc.ko.300.vec
 RUN pip3 install gensim
 
